Fixed: Selector on Iphone

--- a/components/language-selector/language-selector.css
+++ b/components/language-selector/language-selector.css
@@ -1,3 +1,7 @@
+:host {
+    font-size: 16px;
+}
+
 .language-selector {
     position: fixed;
     top: 1rem;
